# peasy-lib

./: .copier-answers.lib.yml  .copier-answers.project-base.yml  .copier-answers.project-lib.yml  .copier-answers.shared.yml  .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pixi.toml  pyproject.toml  versions.json
.github/actions/download-artifact/: action.yml
.github/actions/github-script/: action.yml
.github/actions/setup-easyscience-bot/: action.yml
.github/actions/setup-pixi/: action.yml
.github/actions/upload-artifact/: action.yml
.github/actions/upload-codecov/: action.yml
.github/scripts/: publish-dashboard.sh
.github/workflows/: backmerge.yaml  backmerge.yml  build-docs.yml  cleanup.yml  coverage.yml  dashboard.yaml  dashboard.yml  docs.yaml  docs.yml  issues-labels.yml  lint-format.yml  pr-labels.yml  pypi-publish.yml  pypi-test.yaml  pypi-test.yml  quality.yml  release-notes.yaml  release-notes.yml  release-pr.yml  security.yml  test-trigger.yml  test.yaml  test.yml  tutorial-tests-trigger.yml  tutorial-tests.yaml  tutorial-tests.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api-reference/: index.html
0.1.0/installation-and-setup/: index.html
0.1.0/introduction/: index.html
0.1.0/tutorials/: index.html
0.1.0/tutorials/tutorial/: index.html  tutorial.ipynb
0.1.0/user-guide/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/api-reference/: index.html
0.2.0/installation-and-setup/: index.html
0.2.0/introduction/: index.html
0.2.0/tutorials/: index.html
0.2.0/tutorials/tutorial/: index.html  tutorial.ipynb
0.2.0/user-guide/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/api-reference/: index.html
1.0.0/installation-and-setup/: index.html
1.0.0/introduction/: index.html
1.0.0/search/: search_index.json
1.0.0/tutorials/: index.html
1.0.0/tutorials/tutorial/: index.html  tutorial.ipynb
1.0.0/user-guide/: index.html
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/api-reference/: index.html
1.1.0/installation-and-setup/: index.html
1.1.0/introduction/: index.html
1.1.0/tutorials/: index.html
1.1.0/tutorials/tutorial/: index.html  tutorial.ipynb
1.1.0/user-guide/: index.html
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/api-reference/: index.html
1.1.1/installation-and-setup/: index.html
1.1.1/introduction/: index.html
1.1.1/search/: search_index.json
1.1.1/tutorials/: index.html
1.1.1/tutorials/tutorial/: index.html  tutorial.ipynb
1.1.1/user-guide/: index.html
1.1.2/: 404.html  index.html  sitemap.xml
1.1.2/api-reference/: index.html
1.1.2/installation-and-setup/: index.html
1.1.2/introduction/: index.html
1.1.2/search/: search_index.json
1.1.2/tutorials/: index.html
1.1.2/user-guide/: index.html
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/api-reference/: index.html
1.2.0/installation-and-setup/: index.html
1.2.0/introduction/: index.html
1.2.0/search/: search_index.json
1.2.0/tutorials/: index.html
1.2.0/user-guide/: index.html
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/api-reference/: index.html
2.0.0/installation-and-setup/: index.html
2.0.0/introduction/: index.html
2.0.0/search/: search_index.json
2.0.0/tutorials/: index.html
2.0.0/user-guide/: index.html
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/api-reference/: index.html
2.0.1/installation-and-setup/: index.html
2.0.1/introduction/: index.html
2.0.1/search/: search_index.json
2.0.1/tutorials/: index.html
2.0.1/user-guide/: index.html
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/api-reference/: index.html
2.1.0/installation-and-setup/: index.html
2.1.0/introduction/: index.html
2.1.0/search/: search_index.json
2.1.0/tutorials/: index.html
2.1.0/user-guide/: index.html
2.1.1/: 404.html  index.html  sitemap.xml
2.1.1/api-reference/: index.html
2.1.1/installation-and-setup/: index.html
2.1.1/introduction/: index.html
2.1.1/search/: search_index.json
2.1.1/tutorials/: index.html
2.1.1/user-guide/: index.html
2.1.2/: 404.html  index.html  sitemap.xml
2.1.2/api-reference/: index.html
2.1.2/installation-and-setup/: index.html
2.1.2/introduction/: index.html
2.1.2/search/: search_index.json
2.1.2/tutorials/: index.html
2.1.2/user-guide/: index.html
2.1.3/: 404.html  index.html  sitemap.xml
2.1.3/api-reference/: index.html
2.1.3/installation-and-setup/: index.html
2.1.3/introduction/: index.html
2.1.3/search/: search_index.json
2.1.3/tutorials/: index.html
2.1.3/user-guide/: index.html
2.1.4/: 404.html  index.html  sitemap.xml
2.1.4/api-reference/: index.html
2.1.4/installation-and-setup/: index.html
2.1.4/introduction/: index.html
2.1.4/search/: search_index.json
2.1.4/tutorials/: index.html
2.1.4/user-guide/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api-reference/: index.html
dev/installation-and-setup/: index.html
dev/introduction/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
dev/user-guide/: index.html
docs/: index.md  mkdocs.yml
docs/api/: index.md
docs/api-reference/: index.md
docs/docs/: index.md
docs/installation/: index.md
docs/installation-and-setup/: index.md
docs/introduction/: index.md
docs/tutorials/: index.md
docs/usage/: getting-started.md  index.md  terminology.md
docs/user-guide/: index.md
latest/: 404.html  index.html
latest/api-reference/: index.html
latest/installation-and-setup/: index.html
latest/introduction/: index.html
latest/tutorials/: index.html
latest/user-guide/: index.html
src/easydiffraction/: __init__.py  dummy.py
src/easypeasy/: __init__.py
tests/functional/: test_dummy.py
tests/unit/: test_dummy.py
tools/: add_license_headers.py  check_license_headers.py  copier_wrapper.py  license_headers.py  prepare_docs.sh  remove_license_headers.py  test_scripts.py  update_docs_assets.py  update_github_labels.py  update_spdx.py
(+47 files in other folders)
